# CSC

./: Cargo.toml
proto/: Cargo.toml  build.rs
proto/message/: hello_world.proto
proto/src/proto/: hello.rs
src/client/: Cargo.toml
src/client/src/: bus.rs  business.rs  event.rs  main.rs  router.rs  ui.rs  widgets.rs
src/client/src/ui/: error.rs  home.rs  profile.rs  setting.rs
src/client/src/widgets/: custom_button.rs  my_dock.rs
src/message/: Cargo.toml
src/message/src/: lib.rs  message.rs  message_build.rs  msg.rs
src/message/src/message/: motor.rs  quit.rs
src/server/: Cargo.toml
src/server/src/: main.rs  subsystem.rs
src/subsystem/: Cargo.toml
src/subsystem/src/: lib.rs  subsystem.rs
src/subsystem/src/subsystem/: tcpsystem.rs
