[workspace]
members = [
    "src/client",
    "src/server",
    "src/message"
    # "proto"
]

resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prost = "0.13"
tonic = "0.12"
tokio-tungstenite = "0.24"
futures-util = "0.3"
url = "2.2"
anyhow = "1"
clap = { version = "4.0.18", features = ["derive"] }
tracing = {version = "0.1", features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
num_enum = {version = "*"}
uid ={ version = "*"}
uuid ={ version = "*"}
crossbeam = {version = "*"}
lazy_static = {version = "*"}