[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = {version = "0.29"}
eframe = {version = "0.29"}
tokio = { workspace = true}
serde = { workspace = true}
serde_json = { workspace = true}
crossbeam = { workspace = true}
message = { path = "../message"}
lazy_static = { workspace = true}

egui_extras = {version = "0.29"}
egui_file = {version = "0.19"}
egui_dock = {version = "0.14"}
egui-phosphor = "0.7.3"
hello_egui = {version = "*"}