[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio ={ workspace = true}
message = { path = "../message" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-serial = { version = "5", features = ["rt"] }
tokio-modbus = { version = "0.15", features = ["rtu"] }
